--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
 	"scripts": {
 		"test": [
 			"parallel-lint . --exclude vendor --exclude node_modules",
-			"minus-x check ."
+          "minus-x check "
 		],
 		"fix": [
-			"minus-x fix ."
+          "minus-x fix "
 		]
 	}
 }
