--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,31 @@
 {
+	"name": "bordercloud/namespacedata",
+	"description": "The NamespaceData extension allows a way to define a data tab for main pages and user pages besides Subject and Talk tabs.",
+	"type": "mediawiki-extension",
+	"require": {
+	},
+	"license": "Creative Commons",
+	"authors": [
+		{
+			"name": "Karima Rafes",
+			"email": "karima.rafes@gmail.com"
+		}
+	],
 	"require-dev": {
+		"mediawiki/mediawiki-codesniffer": "37.0.0",
 		"mediawiki/minus-x": "1.1.0",
 		"php-parallel-lint/php-console-highlighter": "0.5.0",
-		"php-parallel-lint/php-parallel-lint": "1.2.0"
+		"php-parallel-lint/php-parallel-lint": "1.3.0"
 	},
 	"scripts": {
 		"test": [
 			"parallel-lint . --exclude vendor --exclude node_modules",
-          "minus-x check "
+			"minus-x check .",
+			"phpcs -p -s -v"
 		],
 		"fix": [
-          "minus-x fix "
+			"minus-x fix .",
+			"phpcbf"
 		]
 	}
 }
