--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
 		"api-testing": "mocha --timeout 0 --recursive tests/api-testing"
 	},
 	"devDependencies": {
-		"api-testing": "^1.4.2",
-		"eslint-config-wikimedia": "0.20.0",
-		"grunt": "1.4.0",
-		"grunt-banana-checker": "0.9.0",
-		"grunt-eslint": "23.0.0",
-		"grunt-stylelint": "0.16.0",
-		"stylelint-config-wikimedia": "0.10.3",
-		"grunt-jsonlint": "1.1.0"
+		"api-testing": "1.5.1",
+		"eslint-config-wikimedia": "0.23.0",
+		"grunt": "1.5.3",
+		"grunt-banana-checker": "0.10.0",
+		"grunt-eslint": "24.0.1",
+		"grunt-jsonlint": "2.1.3",
+		"grunt-stylelint": "0.18.0",
+		"stylelint-config-wikimedia": "0.13.1"
 	},
 	"eslintIgnore": [
 		"coverage",
