--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
 	"private": true,
 	"scripts": {
-		"test": "grunt test",
-		"api-testing": "mocha --timeout 0 --recursive tests/api-testing"
+		"test": "grunt test"
 	},
 	"devDependencies": {
-		"api-testing": "1.5.1",
-		"eslint-config-wikimedia": "0.23.0",
-		"grunt": "1.5.3",
-		"grunt-banana-checker": "0.10.0",
-		"grunt-eslint": "24.0.1",
-		"grunt-jsonlint": "2.1.3",
-		"grunt-stylelint": "0.18.0",
-		"stylelint-config-wikimedia": "0.13.1"
+		"api-testing": "1.7.1",
+		"grunt-jsonlint": "3.0.0",
+		"grunt-stylelint": "0.20.1",
+		"stylelint-config-wikimedia": "0.18.0"
 	},
 	"eslintIgnore": [
 		"coverage",
